--- a/app/client/src/app.html
+++ b/app/client/src/app.html
@@ -5,6 +5,13 @@
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="preload"
+			href="%svelte.assets%/news-gothic.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin="anonymous"
+		/>
 		%svelte.head%
 	</head>
 	<body>
